--- a/templates/modules/widgets/aside/popular-posts.html
+++ b/templates/modules/widgets/aside/popular-posts.html
@@ -72,6 +72,10 @@
                     <span th:text="${post.stats.visit ?: 0}" class="tabular-nums"></span>
                 </div>
             </li>
+            <div class="flex flex-row items-center hover:opacity-50 mr-2 mb-2 cursor-pointer transition-all">
+            <span class="text-center px-3 py-1 rounded-md text-sm"><b class="border-b-2 border-ob hover:text-ob"><a
+                    href="/search?page=1&size=12&title=&type=hot" class="">查看更多 ... </a></b></span>
+            </div>
         </ul>
 
         <ul role="list" class="divide-y divide-gray-300 dark:divide-slate-700"
