修复一个显示问题

--- a/templates/modules/widgets/nav-right.html
+++ b/templates/modules/widgets/nav-right.html
@@ -4,7 +4,7 @@
 <th:block th:fragment="nav-right">
     <div id="nav-right" class="header-controls absolute  right-0 flex flex-row"
          tabindex="0" style="z-index:999;right: -40px;width: 140px; top:0.5em">
-        <span class="ob-drop-shadow" data-dia="search" onclick="window.location.href='/search'">
+        <span class="ob-drop-shadow" data-dia="search" onclick="window.location.href='/search?type=search&title=&page=1&size=12'">
     <i class="roozenfont roozen-magnifying-glass" style="font-size: x-large"></i>
     &nbsp;
 </span>
