--- a/templates/macro/post-list.html
+++ b/templates/macro/post-list.html
@@ -4,6 +4,17 @@
             .active .tab-span {
                 background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);
             }
+            @media (max-width: 768px) {
+                #post-cols {
+                    grid-template-columns: repeat(2, 1fr);
+                }
+            }
+
+            @media (min-width: 769px) {
+                #post-cols {
+                    grid-template-columns: repeat(3, 1fr);
+                }
+            }
         </style>
         <script type="text/javascript" th:src="@{/assets/js/navigator.js}"></script>
         <ul id="post_tab" th:if="${type=='tag'}" th:with="tags = ${tagFinder.listAll()}" class="tab expanded-tab"
