--- a/templates/index.html
+++ b/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:th="https://www.thymeleaf.org"
-      th:replace="~{layout :: html(htmlType = 'index',content = ~{::content},title = ${ site.title + ' - ' +'绳艺捆绑视频'})}">
+      th:replace="~{layout :: html(htmlType = 'index',content = ~{::content},title = ${ site.title + ' - ' +'绳艺网站'})}">
 <th:block th:fragment="content">
     <th:block th:replace="~{macro/app-banner :: app-banner(img=${theme.config.top.index_img})}"/>
     <div class="relative z-10">
