--- a/templates/modules/main.html
+++ b/templates/modules/main.html
@@ -15,7 +15,7 @@
     </span>
     <div class="main-grid">
         <th:block
-                th:replace="~{macro/post-list :: post-list('tag',${posts.items},${theme.config.article.index_number})}"/>
+                th:replace="~{macro/post-list :: post-list('category',${posts.items},${theme.config.article.index_number})}"/>
         <div th:replace="~{modules/aside :: aside(${theme.config.sidebar.widgets.indexWidgets})}"></div>
     </div>
 </th:block>
