--- a/templates/modules/main-rec.html
+++ b/templates/modules/main-rec.html
@@ -117,7 +117,7 @@
             <p id="article-list"
                class="relative opacity-90 flex items-center pb-2 mb-8 text-3xl text-ob-bright uppercase">
                 <i class="roozenfont roozen-hand-heart-fill" style="font-size: 1em;"></i> &nbsp;
-                推荐
+                为您推荐
                 <span class="absolute bottom-0 h-1 w-24 rounded-full"
                       style="background: linear-gradient(130deg, rgb(36, 198, 220), rgb(84, 51, 255) 41.07%, rgb(255, 0, 153) 76.05%);"></span>
             </p>
