--- a/templates/modules/widgets/nav-right.html
+++ b/templates/modules/widgets/nav-right.html
@@ -17,8 +17,9 @@
                 <ul th:with="menu = ${#strings.isEmpty(theme.config.nav.menu) ? menuFinder.getPrimary() : menuFinder.getByName(theme.config.nav.menu)}">
                     <li><a href="/uc" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">个人中心</a></li>
                     <li><a href="/search?page=1&size=12&title=&type=hot" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">热门影片</a></li>
-<!--                    <li><a href="/search?page=1&size=12&title=&type=favorite" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">我的收藏</a></li>-->
+                    <li><a href="/favo?page=1&size=12" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">我的收藏</a></li>
                     <li><a href="#" id="theme-toggle-link" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">夜间模式</a></li>
+                    <li><a href="/logout" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;">登出</a></li>
                     <li th:each="menuItem : ${menu.menuItems}">
                         <a th:href="@{${menuItem.status.href}}" style="display: block; padding: 8px 16px; text-decoration: none; color: #000;" th:text="${menuItem.status.displayName}"></a>
                     </li>
