--- a/templates/search.html
+++ b/templates/search.html
@@ -29,8 +29,8 @@
               title=${param.title != null && param.title.size() > 0 ? param.title[0] : ''},
               type=${param.type != null && param.type.size() > 0 ? param.type[0] : 'search'}">
 
-                <div th:if="${type == 'hot' or (type == 'search' and title != '')}"
-                     th:with="posts = ${type == 'hot' ? postFinder.list({page: page, size: size, sort: {'stats.visit,desc'}}) : postFinder.listByTitle(page, size, title)}">
+                <div th:if="${type == 'hot' or type=='favorite' or (type == 'search' and title != '')}"
+                     th:with="posts = ${type == 'hot' ? postFinder.list({page: page, size: size, sort: {'stats.visit,desc'}}) : (type == 'favorite' ? singlePageFinder.listByFavorites(page, size) : postFinder.listByTitle(page, size, title))}">
                     <div th:if="${posts.total == 0}" style="text-align: center;">
                         <p><strong>没有找到相关内容.</strong></p>
                     </div>
